backend api overhaul, partly working admin page
