# backend/api/books.py
@@ -1,24 +1,29 @@
-from flask_injector import inject
-from data_access.db_access import get_books, insert_into_books
+from data_access import books, user_favorited_books
 from pathlib import Path
 from random import Random
+import sys
 
 
-@inject
 def get_all_books():
-    books = []
-    for book in get_books():
-        books.append(
-            {
-                "book_id": book[0],
-                "title": book[1],
-                "cover_path": "static/covers/" + book[2],
-            }
-        )
-    return books, 200
+    return books.get_all_books(), 200
 
 
-@inject
+def get_user_favorite_books(user_id):
+    return user_favorited_books.get_user_favorite_books(user_id), 200
+
+
+def add_favorite_book(favorite_payload):
+    return user_favorited_books.create_user_favorited_book(
+        favorite_payload["user_id"], favorite_payload["book_id"]
+    ), 200
+
+
+def remove_favorite_book(favorite_payload):
+    return user_favorited_books.delete_user_favorited_book(
+        favorite_payload["user_id"], favorite_payload["book_id"]
+    ), 200
+
+
 def insert_book(cover_image, book_title):
     print(cover_image)
     if cover_image.filename.split(".")[-1].lower() not in [
@@ -35,10 +40,13 @@ def insert_book(cover_image, book_title):
         + "."
         + cover_image.filename.split(".")[-1]
     )
+    Path(Path(sys.argv[0]).parent, "static", "covers").mkdir(
+        parents=True, exist_ok=True
+    )
     try:
         with open(
             Path(
-                ".",
+                Path(sys.argv[0]).parent,
                 "static",
                 "covers",
                 file_name,
@@ -51,4 +59,4 @@ def insert_book(cover_image, book_title):
             "Cover with same name exists try with changing the cover image name.",
             400,
         )
-    return insert_into_books(book_title, file_name), 200
+    return books.create_book(book_title, file_name), 200
